# poc-ibis-async

./: Makefile  README.md  db.sqlite  pyproject.toml
.github/workflows/: main.yaml
conda/: dev.yaml
ibis_async_app/: db.py  main.py
ibis_async_app/routers/: db.py
sql/: create.sql
tests/scripts/: test_endpoint.sh
